--- a/static/index.html
+++ b/static/index.html
@@ -30,37 +30,40 @@
         <ul class="navbar-nav ms-auto me-auto">
           <li class="nav-item">
             <a class="nav-link" href="about.html">
-              <h4 class="me-5">About Us</h4>
+              <h4 class="me-5 navtext">About Us</h4>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <h4 class="me-5">Courses</h4>
+              <h4 class="me-5 navtext">Courses</h4>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <h4 class="me-5">Blog</h4>
+              <h4 class="me-5 navtext">Blog</h4>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <h4 class="me-5">Contact</h4>
+              <h4 class="me-5 navtext">Contact</h4>
             </a>
           </li>
         </ul>
       </div>
     </nav>
-    <span>
+    <!-- <span>
       <button class="login">Log In</button>
       <button class="signup">Sign Up</button>
-    </span>
-    <button class="enroll">Enroll</button>
+    </span> -->
+    <button class="enrollBtn">Enroll</button>
     <h1 class="front-text">learn to translate with audar</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+    <script>
+      src = "main.js";
+    </script>
   </body>
 </html>
