--- a/static/index.html
+++ b/static/index.html
@@ -14,56 +14,429 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <a class="navbar-brand" href="#">
-        <h3 class="ms-5"><b>Logo</b></h3>
-      </a>
-      <button
-        type="button"
-        class="navbar-toggler"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarCollapse"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse" id="navbarCollapse">
-        <ul class="navbar-nav ms-auto me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">
-              <h4 class="me-5 navtext">About Us</h4>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <h4 class="me-5 navtext">Courses</h4>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <h4 class="me-5 navtext">Blog</h4>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <h4 class="me-5 navtext">Contact</h4>
-            </a>
-          </li>
-        </ul>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><h3 class="ms-3 fw-bold text-primary">audar</h3></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto me-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#"
+                  ><h5 class="me-5 navtext navtextclr">About us</h5></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><h5 class="me-5 navtext navtextclr">Courses</h5></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><h5 class="me-5 navtext navtextclr">Blog</h5></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><h5 class="me-5 navtext navtextclr">Contact</h5></a
+                >
+              </li>
+            </ul>
+            <div class="d-grid gap-2 d-md-block">
+              <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#signInModal">Sign In</button>
+              <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#logInModal">Log In</button>
+            </div>
+            <div>
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDarkDropdownMenuLink"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Eng
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-dark"
+                    aria-labelledby="navbarDarkDropdownMenuLink"
+                  >
+                    <li><a class="dropdown-item" href="#">Kz</a></li>
+                    <li>
+                      <a class="dropdown-item" href="#">Rus</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="modal fade" id="signInModal" tabindex="-1" aria-labelledby="signInModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title text-center text-primary" id="exampleModalLabel">create a new account</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="InputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              </div>
+              <div class="mb-3">
+                <label for="InputPassword" class="form-label">Password</label>
+                <input type="password" class="form-control" id="InputPassword" aria-describedby="passwordHelpBlock">
+              </div>
+              <div id="passwordHelpBlock" class="form-text mb-3">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+              </div>
+              <div class="mb-3">
+                <label for="InputName" class="form-label">Name</label>
+                <input type="text" class="form-control" id="InputName">
+              </div>
+              <div class="mb-3">
+                <label for="InputLastName" class="form-label">Last name</label>
+                <input type="text" class="form-control" id="InputLastName">
+              </div>
+              <div class="mb-3">
+                <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#logInModal">Already have an account?</button>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Create</button>
+          </div>
+        </div>
       </div>
-    </nav>
-    <!-- <span>
-      <button class="login">Log In</button>
-      <button class="signup">Sign Up</button>
-    </span> -->
-    <button class="enrollBtn">Enroll</button>
-    <h1 class="front-text">learn to translate with audar</h1>
+    </div>
+    <div class="modal fade" id="logInModal" tabindex="-1" aria-labelledby="logInModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title text-primary" id="logInModalLabel">Log In</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="userInputEmail" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="userInputEmail" aria-describedby="emailHelp">
+              </div>
+              <div class="mb-3">
+                <label for="userInputPassword" class="form-label">Password</label>
+                <input type="password" class="form-control" id="userInputPassword">
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Keep me signed</label>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Log in</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid pt-5 bk-img main-page-height">
+      <div class="row mt-5">
+        <div class="col mt-5 pt-5 ms-5">
+          <h1 class="text-white mt-4">learn to translate with audar</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col mt-3 ml-5">
+          <button
+            type="button"
+            class="btn btn-primary ms-5 enroll-btn btn-lg"
+            data-bs-toggle="modal"
+            data-bs-target="#enroll-modal"
+            style="width: 10rem"
+          >
+            Enroll
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal"
+      id="enroll-modal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <p
+              class="modal-title fs-5 text-center text-primary"
+              id="staticBackdropLabel"
+            >
+              Sign up to enroll
+            </p>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="row d-flex align-items-center">
+              <div class="col-3">
+                <h5>Name:</h5>
+              </div>
+              <div class="col-9">
+                <input type="text" class="form-control name-input" />
+              </div>
+              <div class="col-3 mt-3">
+                <h5>Surname:</h5>
+              </div>
+              <div class="col-9 mt-3">
+                <input type="text" class="form-control surname-input" />
+              </div>
+              <div class="col-3 mt-3">
+                <h5>D.O.B.:</h5>
+              </div>
+              <div class="col-9 mt-3">
+                <input type="text" class="form-control birthday-input" />
+              </div>
+              <div class="col-3 mt-3">
+                <h5>Email:</h5>
+              </div>
+              <div class="col-9 mt-3">
+                <input type="email" class="form-control email-input" />
+              </div>
+              <div class="col-3 mt-3">
+                <h5>Phone:</h5>
+              </div>
+              <div class="col-9 mt-3">
+                <div class="form-check form-check-inline work-phone-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="inlineRadioOptions"
+                    id="inlineRadio1"
+                    value="option1"
+                  />
+                  <label class="form-check-label" for="inlineRadio1"
+                    >Work</label
+                  >
+                </div>
+                <div class="form-check form-check-inline">
+                  <input
+                    class="form-check-input home-phone-check"
+                    type="radio"
+                    name="inlineRadioOptions"
+                    id="inlineRadio2"
+                    value="option2"
+                  />
+                  <label class="form-check-label" for="inlineRadio2"
+                    >Home</label
+                  >
+                </div>
+              </div>
+              <div class="col-3 mt-3"></div>
+              <div class="col-9 mt-3">
+                <input type="text" class="form-control phone-input" />
+              </div>
+              <div class="col-3 mt-3">Mode:</div>
+              <div class="col-9 mt-3">
+                <div class="form-check form-check-inline online-mode-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="inlineRadioOptions"
+                    id="inlineRadio1"
+                    value="option1"
+                  />
+                  <label class="form-check-label" for="inlineRadio1"
+                    >Online</label
+                  >
+                </div>
+                <div class="form-check form-check-inline">
+                  <input
+                    class="form-check-input inPerson-mode-check"
+                    type="radio"
+                    name="inlineRadioOptions"
+                    id="inlineRadio2"
+                    value="option2"
+                  />
+                  <label class="form-check-label" for="inlineRadio2"
+                    >In-person</label
+                  >
+                </div>
+              </div>
+              <div class="col-3 mt-3">
+                <h5>Course:</h5>
+              </div>
+              <div class="col-9 mt-3">
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>Select one</option>
+                  <option value="1">Simultaneous interpretation</option>
+                  <option value="2">Consequitive interpretation</option>
+                  <option value="3">Imagery translation</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary submit-Enroll-Btn">
+              Submit
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-3 border-start border-primary ms-5">
+      <h3 class="text-white">Courses that we offer:</h3>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm">
+          <div class="card h-100">
+            <img
+              src="course-pic-1.jpg"
+              class="card-img-top"
+              alt="Imagery translation"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Imagery translation</h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card h-100">
+            <img
+              src="course-pic-2.jpg"
+              class="card-img-top"
+              alt="Simultaneous interpretation"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Simultaneous interpretation</h5>
+              <p class="card-text">This is a short card.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card h-100">
+            <img
+              src="course-pic-3.jpg"
+              class="card-img-top"
+              alt="Consecutive interpretation"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Consecutive interpretation</h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card h-100">
+            <img
+              src="course-pic-4.jpg"
+              class="card-img-top"
+              alt="Multimedia translation"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Multimedia translation</h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5 border-start border-primary ms-5">
+      <h3 class="text-white">Why us?:</h3>
+    </div>
+    <div class="container">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="courasel11.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="courasel2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <script>
-      src = "main.js";
+    <script src="main.js">
     </script>
   </body>
 </html>
